pod-with-invalid-image.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-valid-image
  namespace: first-namespace
  labels:
    team: "example-team"
spec:
  containers:
    - name: nginx
      image: nginx:latest
      resources:
        limits:
          cpu: "500m"
          memory: "512Mi"
